# Skarn

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  install.sh  skarn.example.toml
.github/workflows/: ci.yml  release.yml
crates/skarn/: Cargo.toml
crates/skarn-codemode/: Cargo.toml
crates/skarn-codemode/src/: bridge.rs  dts.rs  engine.rs  lib.rs  validate.rs
crates/skarn-codemode/tests/: run.rs
crates/skarn-common/: Cargo.toml
crates/skarn-common/src/: command.rs  error.rs  lib.rs  tokens.rs
crates/skarn-compress/: Cargo.toml
crates/skarn-compress/assets/: default_rules.yaml
crates/skarn-compress/src/: engine.rs  lib.rs  rules.rs
crates/skarn-compress/tests/: compress_golden.rs
crates/skarn-gateway/: Cargo.toml
crates/skarn-gateway/src/: config.rs  downstream.rs  execute.rs  lib.rs  registry.rs  server.rs  worker_proto.rs
crates/skarn-sandbox/: Cargo.toml
crates/skarn-sandbox/src/: lib.rs  linux.rs  macos.rs  unsupported.rs  windows.rs
crates/skarn-sandbox/tests/: runtime.rs
crates/skarn/src/: commands.rs  main.rs  scaffold.rs
docs/adr/: 0001-quickjs-over-deno-core.md  0002-spawn-based-sandbox-model.md  0003-code-mode-thread-isolation.md  0004-tool-namespacing-and-manifest.md  0005-mcp-sdk-and-protocol-version.md  0006-http-downstream-transport.md  0007-cross-process-sandboxed-worker.md  README.md
docs/integrations/: claude-code.md  cursor-windsurf.md
examples/echo-mcp-server/: Cargo.toml
examples/echo-mcp-server/src/: lib.rs  main.rs
examples/echo-mcp-server/tests/: gateway_e2e.rs  http_transport.rs
examples/scripts/: echo-demo.js  triage-stale-issues.ts
website/src/: App.tsx  index.css
website/src/components/: Hero.tsx  Nav.tsx  hero.css  nav.css
website/src/data/: content.ts
