# Skarn — Cargo workspace
#
# A cross-platform, single-binary Rust Model Context Protocol (MCP) gateway with
# OS-native sandboxing, an embedded Code Mode engine, and shell-output token
# compression. See README.md for the full picture.

[workspace]
resolver = "3"
members = [
    "crates/skarn-common",
    "crates/skarn-sandbox",
    "crates/skarn-compress",
    "crates/skarn-codemode",
    "crates/skarn-gateway",
    "crates/skarn",
    "examples/echo-mcp-server",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Rani367/Skarn"
homepage = "https://github.com/Rani367/Skarn"
authors = ["Skarn contributors"]
keywords = ["mcp", "sandbox", "ai", "agent", "llm"]
categories = ["command-line-utilities", "development-tools"]

