# Skarn — Cargo workspace
#
# A cross-platform, single-binary Rust Model Context Protocol (MCP) gateway with
# OS-native sandboxing, an embedded Code Mode engine, and shell-output token
# compression. See README.md for the full picture.

[workspace]
resolver = "3"
members = [
    "crates/skarn-common",
    "crates/skarn-sandbox",
    "crates/skarn-compress",
    "crates/skarn-codemode",
    "crates/skarn-gateway",
    "crates/skarn",
    "examples/echo-mcp-server",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Rani367/Skarn"
homepage = "https://github.com/Rani367/Skarn"
authors = ["Skarn contributors"]
keywords = ["mcp", "sandbox", "ai", "agent", "llm"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Internal crates
skarn-common = { path = "crates/skarn-common", version = "1.0.0" }
skarn-sandbox = { path = "crates/skarn-sandbox", version = "1.0.0" }
skarn-compress = { path = "crates/skarn-compress", version = "1.0.0" }
skarn-codemode = { path = "crates/skarn-codemode", version = "1.0.0" }
skarn-gateway = { path = "crates/skarn-gateway", version = "1.0.0" }

# Shared third-party dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "io-util",
    "io-std",
