[package]
name = "skarn-codemode"
description = "Hermetic Code Mode engine: run sandboxed JS/TS that bridges to MCP tools, with oxc static validation."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
