[package]
name = "skarn-codemode"
description = "Hermetic Code Mode engine: run sandboxed JS/TS that bridges to MCP tools, with oxc static validation."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
skarn-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true }
futures = { workspace = true }
rquickjs = { version = "0.9", features = ["futures", "macro"] }
oxc_allocator = "0.95"
oxc_parser = "0.95"
oxc_ast = "0.95"
oxc_ast_visit = "0.95"
oxc_span = "0.95"
oxc_codegen = "0.95"
oxc_transformer = "0.95"
oxc_semantic = "0.95"

[dev-dependencies]
tokio = { workspace = true }
