[package]
name = "skarn-common"
description = "Shared primitives for the Skarn workspace: command specs, token estimation, errors."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
# Use the real tiktoken tokenizer for token estimation instead of the byte heuristic.
tiktoken = ["dep:tiktoken-rs"]
