[package]
name = "skarn-compress"
description = "Declarative, YAML-driven token compression for noisy shell-command output."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
skarn-common = { workspace = true }
serde = { workspace = true }
