[package]
name = "skarn-gateway"
description = "MCP gateway: aggregate downstream servers behind a small Code Mode tool surface."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
skarn-common = { workspace = true }
skarn-codemode = { workspace = true }
skarn-sandbox = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
