[package]
name = "skarn-gateway"
description = "MCP gateway: aggregate downstream servers behind a small Code Mode tool surface."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
skarn-common = { workspace = true }
skarn-codemode = { workspace = true }
skarn-sandbox = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = "0.1"
arc-swap = "1"
toml = "0.8"
http = "1"
rmcp = { version = "1.8.0", features = [
    "server",
    "client",
    "transport-io",
    "transport-child-process",
    # Streamable HTTP downstream transport (handles the SSE response stream
    # internally). The reqwest client's TLS is configured below.
    "transport-streamable-http-client-reqwest",
] }
# Pin the reqwest TLS stack to rustls + ring (not aws-lc-rs): a smaller, more
# cross-compile-friendly crypto backend that keeps the single-binary goal. The
# ring provider is installed as the process default before the first HTTPS use.
reqwest = { version = "0.13", default-features = false, features = [
    "rustls-no-provider",
    "http2",
    "charset",
    "json",
    "stream",
] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }

[dev-dependencies]
tokio = { workspace = true }
