[package]
name = "skarn-sandbox"
description = "OS-native process sandboxing (Seatbelt / Landlock+seccomp / AppContainer) with a unified API."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
