[package]
name = "skarn-sandbox"
description = "OS-native process sandboxing (Seatbelt / Landlock+seccomp / AppContainer) with a unified API."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
# A tiny helper used by the integration tests (and handy for manual debugging):
# it self-applies a policy passed via $SKARN_PROBE_POLICY, then performs a single
# filesystem/network operation and exits with a status code the test asserts on.
name = "skarn-sandbox-probe"
path = "src/bin/probe.rs"

[dependencies]
skarn-common = { workspace = true }
serde = { workspace = true }
