[package]
name = "skarn-sandbox"
description = "OS-native process sandboxing (Seatbelt / Landlock+seccomp / AppContainer) with a unified API."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
# A tiny helper used by the integration tests (and handy for manual debugging):
# it self-applies a policy passed via $SKARN_PROBE_POLICY, then performs a single
# filesystem/network operation and exits with a status code the test asserts on.
name = "skarn-sandbox-probe"
path = "src/bin/probe.rs"

[dependencies]
skarn-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
seccompiler = "0.5"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_Security",
