[package]
name = "skarn"
description = "Skarn — a cross-platform MCP gateway with OS-native sandboxing, Code Mode, and token compression."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
default-run = "skarn"

[[bin]]
name = "skarn"
path = "src/main.rs"
