[package]
name = "skarn"
description = "Skarn — a cross-platform MCP gateway with OS-native sandboxing, Code Mode, and token compression."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
default-run = "skarn"

[[bin]]
name = "skarn"
path = "src/main.rs"

[dependencies]
skarn-common = { workspace = true }
skarn-sandbox = { workspace = true }
skarn-compress = { workspace = true }
skarn-codemode = { workspace = true }
skarn-gateway = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
