[package]
name = "echo-mcp-server"
description = "A tiny downstream MCP server used by Skarn's examples and integration tests."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "echo-mcp-server"
path = "src/main.rs"

[dependencies]
