[package]
name = "echo-mcp-server"
description = "A tiny downstream MCP server used by Skarn's examples and integration tests."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "echo-mcp-server"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rmcp = { version = "1.8.0", features = ["server", "transport-io"] }

[dev-dependencies]
skarn-gateway = { workspace = true }
skarn-codemode = { workspace = true }
skarn-common = { workspace = true }
tokio = { workspace = true, features = ["net"] }
axum = "0.8"
# Host EchoServer over Streamable HTTP in the transport integration test.
rmcp = { version = "1.8.0", features = [
    "server",
    "transport-io",
    "transport-streamable-http-server",
